* responsive design fixes for title and colours

--- a/src/slides/GoogleHealth/styles.module.css
+++ b/src/slides/GoogleHealth/styles.module.css
@@ -38,7 +38,7 @@
   background-color: var(--brand-white, #ffffff);
   background-position: center center;
   background-size: cover;
-  color: #444444;
+  color: var(--brand-black, #000000);
   padding-left: 24px;
   padding-right: 24px;
   box-sizing: border-box;
@@ -86,4 +86,13 @@
 
 .link {
   text-decoration: underline;
+}
+
+.title {
+  font-size: 2rem;
+
+  @media (min-width: 1500px) and (min-height: 950px) {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
 }
