--- a/src/slides/DeepMind/styles.module.css
+++ b/src/slides/DeepMind/styles.module.css
@@ -56,3 +56,12 @@
 .link {
   text-decoration: underline;
 }
+
+.title {
+  font-size: 2rem;
+
+  @media (min-width: 1500px) and (min-height: 950px) {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
+}
