--- a/src/slides/Intro/styles.module.css
+++ b/src/slides/Intro/styles.module.css
@@ -32,7 +32,7 @@
     padding: 20px;
   }
 
-  @media (min-width: 1600px) and (min-height: 950px) {
+  @media (min-width: 1500px) and (min-height: 950px) {
     max-width: 1000px;
   }
 }
@@ -41,6 +41,9 @@
   flex: 2;
   @media (max-width: 500px) and (max-height: 950px) {
     margin-top: -33%;
+  }
+  @media (min-width: 1500px) and (max-height: 950px) {
+    flex: 3;
   }
 }
 
@@ -60,8 +63,10 @@
   @media (max-width: 450px) {
     font-size: 2rem;
   }
-  @media (min-width: 1600px) and (min-height: 950px) {
+  @media (min-width: 1500px) and (min-height: 950px) {
     font-size: 5rem;
+    margin-bottom: 1rem;
+    line-height: 1;
   }
 }
 
@@ -72,8 +77,10 @@
     font-weight: bold;
     line-height: 1.5;
   }
-  @media (min-width: 1600px) and (min-height: 950px) {
-    font-size: 5rem;
+  @media (min-width: 1500px) and (min-height: 950px) {
+    font-size: 2.5rem;
+    line-height: 1.5;
+    line-height: 1;
   }
 }
 
