--- a/src/slides/Nokia/styles.module.css
+++ b/src/slides/Nokia/styles.module.css
@@ -35,10 +35,8 @@
 .container {
   width: 100%;
   height: 100%;
-  background-color: var(--brand-black, #000000);
   background-position: center center;
   background-size: cover;
-  color: var(--brand-white, #ffffff);
   padding-left: 24px;
   padding-right: 24px;
   box-sizing: border-box;
@@ -63,6 +61,8 @@
   flex-direction: column;
   padding-top: var(--nav-bar-height);
   box-sizing: border-box;
+  color: var(--brand-white, #ffffff);
+  text-shadow: 0px 1px 0px var(--brand-black, #000000);
 
   @media (max-width: 700px) {
     padding-right: 0;
