--- a/src/components/background/styles.module.css
+++ b/src/components/background/styles.module.css
@@ -1,8 +1,14 @@
 .container {
+  transition: opacity cubic-bezier(0.6, 0.04, 0.98, 0.335) 200ms;
   width: 100%;
   height: 100%;
   background-size: cover;
   position: relative;
+  opacity: 0;
+}
+
+.container.show {
+  opacity: 1;
 }
 
 .canvas,
