--- a/src/slides/GoogleHealth/styles.module.css
+++ b/src/slides/GoogleHealth/styles.module.css
@@ -37,6 +37,7 @@
   height: 100%;
   background-position: center center;
   background-size: cover;
+  background-color: var(--brand-white, #ffffff);
   color: var(--brand-black, #000000);
   padding-left: 24px;
   padding-right: 24px;
