--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,4 +7,8 @@
 body {
   font-family: 'Raleway', sans-serif;
   background: var(--background-color);
+
+  @media (min-width: 1280px) {
+    font-size: 120%;
+  }
 }
