--- a/src/slides/DeepMind/styles.module.css
+++ b/src/slides/DeepMind/styles.module.css
@@ -38,7 +38,7 @@
 .copyContainer {
   flex: 1;
   width: 100%;
-  padding-right: 12px;
+  padding-left: 12px;
   display: flex;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -58,6 +58,10 @@
 
 .title {
   font-size: 2rem;
+
+  @media (min-width: 1280px) {
+    font-size: 2.5rem;
+  }
 
   @media (min-width: 1500px) and (min-height: 950px) {
     font-size: 3rem;
