--- a/src/slides/GoogleHealth/styles.module.css
+++ b/src/slides/GoogleHealth/styles.module.css
@@ -69,6 +69,7 @@
 .copyContainer {
   flex: 1;
   width: 100%;
+  padding-left: 12px;
   padding-right: 12px;
   display: flex;
   padding-top: 24px;
@@ -89,6 +90,10 @@
 
 .title {
   font-size: 2rem;
+
+  @media (min-width: 1280px) {
+    font-size: 2.5rem;
+  }
 
   @media (min-width: 1500px) and (min-height: 950px) {
     font-size: 3rem;
