--- a/src/slides/Phaidra/styles.module.css
+++ b/src/slides/Phaidra/styles.module.css
@@ -62,6 +62,7 @@
 .copyContainer {
   flex: 1;
   width: 100%;
+  padding-left: 12px;
   padding-right: 12px;
   display: flex;
 
@@ -91,6 +92,10 @@
 
 .title {
   font-size: 2rem;
+
+  @media (min-width: 1280px) {
+    font-size: 2.5rem;
+  }
 
   @media (min-width: 1500px) and (min-height: 950px) {
     font-size: 3rem;
