--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #888;
+  --background-color: #fff;
   --brand-black: #000;
   --brand-blue: #0d58d3;
   --brand-purple: #f0f;
