--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,4 +11,11 @@ body {
   @media (min-width: 1280px) {
     font-size: 120%;
   }
+
+  opacity: 0;
+  transition: opacity cubic-bezier(0.6, 0.04, 0.98, 0.335) 200ms;
+}
+
+body.show {
+  opacity: 1;
 }
