--- a/src/components/slide/styles.module.css
+++ b/src/components/slide/styles.module.css
@@ -3,7 +3,7 @@
   position: relative;
   overflow-x: hidden;
 
-  @media (min-width: 1200px) or (min-height: 750px) {
+  @media (min-height: 690px) {
     height: 100vh;
   }
 }
