--- a/src/slides/Intro/styles.module.css
+++ b/src/slides/Intro/styles.module.css
@@ -87,7 +87,8 @@
     line-height: 1.5;
   }
   @media (min-width: 1500px) and (min-height: 950px) {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
     line-height: 1.5;
     line-height: 1;
   }
