--- a/src/slides/Phaidra/styles.module.css
+++ b/src/slides/Phaidra/styles.module.css
@@ -53,7 +53,7 @@
   flex-direction: row;
 }
 
-@media (max-aspect-ratio: 7/8) {
+@media screen and (max-width: 700px) {
   .content {
     flex-direction: column;
   }
