--- a/src/slides/Intro/styles.module.css
+++ b/src/slides/Intro/styles.module.css
@@ -69,6 +69,7 @@
 
 .header1 {
   font-size: 3rem;
+  text-shadow: 0px 1px 0px var(--brand-white);
   @media (max-width: 450px) {
     font-size: 2rem;
   }
@@ -81,6 +82,7 @@
 
 .header2 {
   font-size: 1.5rem;
+  text-shadow: 0px 1px 0px var(--brand-white);
   @media (max-width: 450px) {
     font-size: 0.75rem;
     font-weight: bold;
